# GParsing

./: .gitignore  CMakeLists.txt  LICENSE  build.sh
include/GParsing/: Find.hpp  GParsing.hpp  LibraryAPI.hpp
include/GParsing/Core/: API.hpp  Buffers.hpp  Compare.hpp
include/GParsing/EXIF/: EXIFDataType.hpp  EXIFDefinitions.hpp  EXIFImageBase.hpp  EXIFImageJPEG.hpp  EXIFTag.hpp  GParsing-EXIF.hpp
include/GParsing/HTML/: GParsing-HTML.hpp  HTMLArgument.hpp  HTMLDefs.hpp  HTMLDoctype.hpp  HTMLDocument.hpp  HTMLElement.hpp  HTMLToken.hpp
include/GParsing/HTTP/: Create.hpp  CreateConfig.hpp  Enums.hpp  GParsing-HTTP.hpp  HTTPMethod.hpp  HTTPRequest.hpp  HTTPRequestException.hpp  HTTPResponse.hpp  HTTPResponseException.hpp  Parse.hpp
include/GParsing/JSON/: GParsing-JSON.hpp  JSONArray.hpp  JSONElement.hpp  JSONExpression.hpp  JSONNumber.hpp  JSONObject.hpp  JSONString.hpp  JSONValue.hpp  JSONWhitespace.hpp
src/: CMakeLists.txt
src/HTTP/: CMakeLists.txt  Create.cpp  CreateConfig.cpp  HTTPRequest.cpp  HTTPRequestException.cpp  HTTPResponse.cpp  HTTPResponseException.cpp  Parse.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp
tests/test1/: CMakeLists.txt  main.cpp
tests/test2/: CMakeLists.txt  main.cpp
tests/test3/: CMakeLists.txt  main.cpp
tests/test4/: CMakeLists.txt  main.cpp
tests/test5/: CMakeLists.txt  main.cpp
